# CNN-App-Docker

./: .dockerignore  .gitignore  docker-compose.yaml  plans.txt
backend/: Dockerfile  README.md  app.py  entrypoint.sh  loggingConfig.py  models.py  pyproject.toml  requirements.txt  worker.py
backend/worker/: Dockerfile  requirements.txt  worker.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ErrorBoundary.jsx  ErrorTestComponent.jsx  HomePage.jsx  main.jsx
logstash/pipeline/: pipeline.conf
