[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI-based backend for training an image classification model on the CIFAR-10 dataset. Features a Celery worker for asynchronous model training tasks, Pydantic models for input validation, and Docker configuration for deployment. Provides API endpoints for initiating training and retrieving results, with planned expansion for custom image classification."
authors = ["btsogt21 <manlaitsoogii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2"
scikit-learn = "^1.5.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
asyncio = "^3.4.3"
celery = "^5.4.0"
redis = "^5.0.7"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.11.0"
pytest = "^8.3.2"
debugpy = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
